--- a/core/auth/src/main/resources/bootstrap.yml
+++ b/core/auth/src/main/resources/bootstrap.yml
@@ -1,21 +1,13 @@
 spring:
   application:
-    name: gateway
+    name: auth
   cloud:
     nacos:
       config:
         server-addr: 192.168.31.129:8848
         file-extension: yaml
+        prefix: gateway
       discovery:
         server-addr: 192.168.31.129:8848
 server:
-  port: 9998
-zuul:
-  routes:
-    auth:
-      path: /auth/**
-      serviceId: auth
-
-ribbon:
-  ReadTimeout: 60000
-  ConnectTimeout: 60000
+  port: 9997
