--- a/core/gateway/src/main/resources/bootstrap.yml
+++ b/core/gateway/src/main/resources/bootstrap.yml
@@ -1,21 +1,17 @@
+server:
+  port: 9998
+
 spring:
   application:
     name: gateway
+  main:
+    allow-bean-definition-overriding: true
   cloud:
     nacos:
-      config:
-        server-addr: 192.168.31.129:8848
-        file-extension: yaml
       discovery:
         server-addr: 192.168.31.129:8848
-server:
-  port: 9998
 zuul:
   routes:
     auth:
       path: /auth/**
       serviceId: auth
-
-ribbon:
-  ReadTimeout: 60000
-  ConnectTimeout: 60000
