--- a/core/auth/src/main/resources/bootstrap.yml
+++ b/core/auth/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       config:
         server-addr: 192.168.31.129:8848
         file-extension: yaml
-        prefix: gateway
+#        prefix: gateway
       discovery:
         server-addr: 192.168.31.129:8848
 server:
