--- a/core/gateway/src/main/resources/bootstrap.yml
+++ b/core/gateway/src/main/resources/bootstrap.yml
@@ -8,6 +8,9 @@ spring:
     allow-bean-definition-overriding: true
   cloud:
     nacos:
+      config:
+        server-addr: 192.168.31.129:8848
+        file-extension: yaml
       discovery:
         server-addr: 192.168.31.129:8848
 zuul:
