--- a/core/gateway/src/main/resources/bootstrap.yml
+++ b/core/gateway/src/main/resources/bootstrap.yml
@@ -13,8 +13,13 @@ spring:
         file-extension: yaml
       discovery:
         server-addr: 192.168.31.129:8848
-zuul:
-  routes:
-    auth:
-      path: /auth/**
-      serviceId: auth
+security:
+  oauth2:
+    client:
+      access-token-uri: http://localhost:9997/oauth/token #令牌端点
+      user-authorization-uri: http://localhost:9997/oauth/authorize #授权端点
+      client-id: web #OAuth2客户端ID
+      client-secret: secret #OAuth2客户端密钥
+    resource:
+      jwt:
+        key-value: springcloud123 #使用对称加密方式，默认算法为HS256
