--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -27,6 +27,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.getf.buildingblock.infrastucture</groupId>
+            <artifactId>fastdev</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
