--- a/core/fastDev/src/main/resources/application.yml
+++ b/core/fastDev/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     url: jdbc:mysql://192.168.137.200:3306/buildingblock_base?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: getf
     password: 111111
-
-
+getf:
+  buildingblock:
+    infrastucture:
+      fastdev:
+        public-interceptor-class-names: [com.getf.buildingblock.infrastructure.fastdev.config.interceptor.OperationInfoInterceptor]
 
 
