--- a/core/infrastructure/pom.xml
+++ b/core/infrastructure/pom.xml
@@ -30,6 +30,18 @@
             <version>1.2.76</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.14.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.3.10.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <groupId>com.getf.buildingblock</groupId>
     <version>0.0.1-SNAPSHOT</version>
