--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>fastdev</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
